<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Param_TcUnit" Id="{8914b509-ade2-41d9-a869-a8850ad59b87}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
    MaxNumberOfTestSuites : UINT := 1000;
    
    MaxNumberOfTestsForEachTestSuite : UINT := 100;
    
    MaxNumberOfAssertsForEachTestSuite : UINT := 1000;
    
    // Enable (TRUE) or disable (FALSE) publishing of the xUnit Xml report
    EnablePublish : BOOL := FALSE;
    
    // Default reserved PLC memory buffer used for composition of the xUnit xml file (64 kb default)
    BufferSize: UDINT := 65535;
    
    // Default path and filename for the xunit testresults e.g.: for use with jenkins 
    FilePath : T_MaxString := 'C:\tcunit_xunit_testresults.xml';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>